--- a/PoolGame3D.vcxproj.filters
+++ b/PoolGame3D.vcxproj.filters
@@ -24,9 +24,21 @@
     <ClCompile Include="OpenGLLoader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="FrameWork.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="OpenGLLoader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Header.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="FrameWork.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="OpenGLHeader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
