--- a/PoolGame3D.vcxproj.filters
+++ b/PoolGame3D.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="OpenGLLoader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ObjModelLoader.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="OpenGLLoader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="stb_image.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ObjModelLoader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
